--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="author" content="Kingsley Ezepue">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Croissant+One&family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
