removed defer attribute

--- a/temples.html
+++ b/temples.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kingsley Ezepue">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
-    <script src="scripts/temples.js"defer></script>
+    <script src="scripts/temples.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
