Updated temple page

--- a/temples.html
+++ b/temples.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Kingsley Ezepue">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
-    <script src="scripts/temples.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,39 +28,39 @@
     <main>
         <h2>Home</h2>
         <figure>
-            <img src="images/Aba Temple.jpg" alt="Temple in Aba">
+            <img src="images/AbaTemple.jpg" alt="Temple in Aba">
             <figcaption>Aba, Nigeria</figcaption>
         </figure>
         <figure>
-            <img src="images/New Mexico temple.jpg" alt="Temple in New Mexico">
+            <img src="images/NewMexicotemple.jpg" alt="Temple in New Mexico">
             <figcaption>Albuquerque, New Mexico</figcaption>
         </figure>
         <figure>
-            <img src="images/Switzerland temple.jpg" alt="Temple in Switzerland">
+            <img src="images/Switzerlandtemple.jpg" alt="Temple in Switzerland">
             <figcaption>Bern, Switzerland</figcaption>
         </figure>
         <figure>
-            <img src="images/Australia Temple.jpg" alt="Temple in Australia">
+            <img src="images/AustraliaTemple.jpg" alt="Temple in Australia">
             <figcaption>Adelaide, Australia</figcaption>
         </figure>
         <figure>
-            <img src="images/Accra ghana temple.jpg" alt="Temple in Ghana">
+            <img src="images/Accraghanatemple.jpg" alt="Temple in Ghana">
             <figcaption>Accra, Ghana</figcaption>
         </figure>
         <figure>
-            <img src="images/Peru Temple.jpeg" alt="Temple in Peru">
+            <img src="images/PeruTemple.jpeg" alt="Temple in Peru">
             <figcaption>Arequipa, Peru</figcaption>
         </figure>
         <figure>
-            <img src="images/Montana Temple.jpg" alt="Temple in Montana">
+            <img src="images/MontanaTemple.jpg" alt="Temple in Montana">
             <figcaption>Billings, Montana</figcaption>
         </figure>
         <figure>
-            <img src="images/Idaho Temple.jpg" alt="Temple in Idaho">
+            <img src="images/IdahoTemple.jpg" alt="Temple in Idaho">
             <figcaption>Boise, Idaho</figcaption>
         </figure>
         <figure>
-            <img src="images/Utah Temple.jpg" alt="Temple in Utah">
+            <img src="images/UtahTemple.jpg" alt="Temple in Utah">
             <figcaption>Bountiful Utah</figcaption>
         </figure>
     </main>
@@ -69,5 +68,7 @@
         <p> &copy; <span id="currentyear"></span> Kingsley Ezepue ---- Nigeria</p>
         <p id="lastModified"></p>
     </footer>
+    
+    <script src="scripts/temples.js"></script>
 </body>
 </html>
