added defer attribute again

--- a/temples.html
+++ b/temples.html
@@ -69,6 +69,6 @@
         <p id="lastModified"></p>
     </footer>
     
-    <script src="scripts/temples.js"></script>
+    <script src="scripts/temples.js" defer></script>
 </body>
 </html>
