--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dubai</title>
+    <title>Dubai City</title>
     <meta name="description" content="A descriptive and responsive page about a place i hope to visit">
     <meta name="author" content="Kingsley Ezepue">
     <link rel="stylesheet" href="styles/place.css">
