--- a/form.html
+++ b/form.html
@@ -25,11 +25,11 @@
             </label>
             <div>Overall Rating*</div>
             <div class="rating-container">
-                <label><input type="radio" name="rating" id="onestarrating" required> &#9734;</label>
-                <label><input type="radio" name="rating" id="twostarrating" required> &#9734;&#9734;</label>
-                <label><input type="radio" name="rating" id="threestarrating" required> &#9734;&#9734;&#9734;</label>
-                <label><input type="radio" name="rating" id="fourstarrating" required> &#9734;&#9734;&#9734;&#9734;</label>
-                <label><input type="radio" name="rating" id="fivestarrating" required> &#9734;&#9734;&#9734;&#9734;&#9734;</label>
+                <label><input type="radio" name="rating" id="onestar" required> &#9734;</label>
+                <label><input type="radio" name="rating" id="twostar" required> &#9734;&#9734;</label>
+                <label><input type="radio" name="rating" id="threestar" required> &#9734;&#9734;&#9734;</label>
+                <label><input type="radio" name="rating" id="fourstar" required> &#9734;&#9734;&#9734;&#9734;</label>
+                <label><input type="radio" name="rating" id="fivestar" required> &#9734;&#9734;&#9734;&#9734;&#9734;</label>
             </div>
             <label>Date of Installation* <input id="date"type="date" name="completeDate" required></label>
             <div>Which features did you find useful in the product?</div>
