changed my name

--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Review Form</title>
     <meta name="description" content="Building a Product review form and using local storage to keep track of user behavior or input">
-    <meta name="Author" content="Kingsley Ezepue">
+    <meta name="Author" content="Ezepue Kingsley">
     <link rel="stylesheet" href="styles/form.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
